--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_dragdropinterval">
+    package="com.example.flutter_dropappointment">
    <application
-        android:label="flutter_dragdropinterval"
+        android:label="flutter_dropappointment"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
